migrate jing.ffm tests to jing.bindings