@@ -103,6 +103,16 @@
                             <proc>full</proc>
                             <annotationProcessorPaths>
                                 <path>
+                                    <groupId>io.jingproject</groupId>
+                                    <artifactId>jing-common-processor</artifactId>
+                                    <version>${revision}</version>
+                                </path>
+                                <path>
+                                    <groupId>io.jingproject</groupId>
+                                    <artifactId>jing-ffm-processor</artifactId>
+                                    <version>${revision}</version>
+                                </path>
+                                <path>
                                     <groupId>org.openjdk.jmh</groupId>
                                     <artifactId>jmh-generator-annprocess</artifactId>
                                     <version>${jmh.version}</version>
@@ -112,6 +122,15 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                    <excludedGroups>require-native-library</excludedGroups>
+                </configuration>
+            </plugin>
 
             <plugin>
                 <groupId>io.jingproject</groupId>
@@ -119,10 +138,21 @@
                 <version>${revision}</version>
                 <executions>
                     <execution>
+                        <id>process-main-providers</id>
                         <phase>process-classes</phase>
                         <goals>
                             <goal>process-jing-providers</goal>
                         </goals>
+                    </execution>
+                    <execution>
+                        <id>process-test-providers</id>
+                        <phase>process-test-classes</phase>
+                        <goals>
+                            <goal>process-jing-providers</goal>
+                        </goals>
+                        <configuration>
+                            <scope>test</scope>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
